--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.90.1",
         "@tailwindcss/vite": "^4.1.17",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "lucide-react": "^0.553.0",
+        "radix-ui": "^1.4.3",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-router": "^7.13.0",
+        "tailwind-merge": "^3.4.1",
         "tailwindcss": "^4.1.17"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
-        "@types/node": "^24.10.0",
+        "@types/node": "^24.10.13",
         "@types/react": "^19.2.2",
         "@types/react-dom": "^19.2.2",
         "@vitejs/plugin-react": "^5.1.0",
@@ -28,6 +32,8 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.24",
         "globals": "^16.5.0",
+        "shadcn": "^3.8.4",
+        "tw-animate-css": "^1.4.0",
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.46.3",
         "vite": "^7.2.2"
