--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,12 +22,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
 
     "baseUrl": ".",
     "paths": {
         "@/*": ["./src/*"]
-    }
+    },
   },
   "include": ["src"]
 }
